--- a/apps/ets_tutoring/public/contact.html
+++ b/apps/ets_tutoring/public/contact.html
@@ -76,7 +76,7 @@
           </div>
           <div class="span5" id="map-container">
               <!--Google Map-->
-              <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=4010+PALOS+VERDES+DR.+NORTH+%23206+ROLLING+HILLS+ESTATES,+CA.+90274&amp;ie=UTF8&amp;hq=&amp;hnear=4010+Palos+Verdes+Dr+N,+Rolling+Hills+Estates,+California+90274&amp;gl=us&amp;t=m&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?q=4010+PALOS+VERDES+DR.+NORTH+%23206+ROLLING+HILLS+ESTATES,+CA.+90274&amp;ie=UTF8&amp;hq=&amp;hnear=4010+Palos+Verdes+Dr+N,+Rolling+Hills+Estates,+California+90274&amp;gl=us&amp;t=m&amp;z=14&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+              <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=4010+PALOS+VERDES+DR.+NORTH+%23206+ROLLING+HILLS+ESTATES,+CA.+90274&amp;ie=UTF8&amp;hq=&amp;hnear=4010+Palos+Verdes+Dr+N,+Rolling+Hills+Estates,+California+90274&amp;gl=us&amp;t=m&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?q=4010+PALOS+VERDES+DR.+NORTH+%23206+ROLLING+HILLS+ESTATES,+CA.+90274&amp;ie=UTF8&amp;hq=&amp;hnear=4010+Palos+Verdes+Dr+N,+Rolling+Hills+Estates,+California+90274&amp;gl=us&amp;t=m&amp;z=14&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
           </div>
         </div>
       </div>
