changed Learnmore link to About us page.  Minor layout spacing changes.

--- a/apps/ets_tutoring_2/public/index.html
+++ b/apps/ets_tutoring_2/public/index.html
@@ -65,8 +65,8 @@
         <h1>ETS Educational & Tutorial Services</h1>
 
         <p>
-        <div class="row">
-          <div class="span5" id="briana">        
+        <div class="row-fluid">
+          <div class="span6" id="briana">        
             <img src ="img/Briana_1200.jpg" width="1200px"/>
           </div>
           <div class="span4">
@@ -75,14 +75,14 @@
             </strong>
         </p>
             <br />
-              <a class="btn btn-primary btn-large" href="faq.html">Learn more &raquo;</a>            
+              <a class="btn btn-primary btn-large" href="about.html">Learn more &raquo;</a>            
           </div>          
         </div>
 
       </div>
 
       <!-- Example row of columns -->
-      <div class="row">
+      <div class="row-fluid">
         <div class="span5 offset2">
           <h2>High Performance</h2>
            <img src = "img/chart_med.jpg" height ="300px"/>
