--- a/apps/ets_tutoring_2/public/about.html
+++ b/apps/ets_tutoring_2/public/about.html
@@ -17,11 +17,6 @@
   <style>
   body {
     background-image: url('img/front.jpg');
-    background-size: cover;
-  }
-  #summary_list li {
-    float: left;
-    padding-right: 50px;
   }
   </style>
 
@@ -73,12 +68,13 @@
       <div class="image">
         <img src = "img/bonnie_marco_1200.jpg">
       </div>
-          <h3>    
-            ETS seeks to instill the spirit of achievement in all of our students
-            through  mentorship, innovation, and student engagement.  ETS tutors build a positive, open relationship with their students so that they 
-            can better understand their needs.
-            Our tutors then create lessons that try to capture their students’ interests.
-          </h3>
+      <br />
+        <p class="lead">    
+          ETS seeks to instill the spirit of achievement in all of our students
+          through  mentorship, innovation, and student engagement.  ETS tutors build a positive, open relationship with their students so that they 
+          can better understand their needs.
+          Our tutors then create lessons that try to capture their students’ interests.
+        </p>
     </div>
 
     <footer>
