--- a/apps/ets_tutoring_2/public/chart.html
+++ b/apps/ets_tutoring_2/public/chart.html
@@ -56,15 +56,34 @@
           </div><!--/.nav-collapse -->
         </div>
       </div>
-    </div>
 
-    <div class="container">
- 
-       <img src = "img/Impact_of_SES_2009-10_26_.jpg" />
+      <div class="hero-unit">
+          <h1> High Performance </h1>        
+        <div class="row">
+          <div class="span4" id="chart_text">
+            <p class="lead text-center">
+                In an impartial study conducted by THE LEGION OF IMPORTANT EDUCATIONAL RESEARCHERS, ETS posted high results. As illustrated by the chart, students enrolled in the ETS program had the greatest average improvements in their test scores.
+            </p>
+
+            <p>
+              This copy can be significantly improved and should be treated as a placeholder.
+            </p>
+          </div>
+          
+          <div class="span6">
+            <img id="chart" src="img/Impact_of_SES_2009-10_26_.jpg" />
+          </div>
+
+        </div> <!--row-->
+      </div> <!-- hero unit -->
 
       <footer>
         <p>&copy; ETS Educational and Tutorial Services, LLC. 2013</p>
       </footer>
+    </div> <!-- container -->
+
+
+
 
     </div> <!-- /container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
