--- a/apps/ets_tutoring_2/public/employment.html
+++ b/apps/ets_tutoring_2/public/employment.html
@@ -71,9 +71,9 @@
               <h2>
                 Traveling Teacher
               </h2>
-              <strong>
+              <p class="lead">
                 We are currently accepting applications for the 2013-2014 school year.
-              </strong>
+              </p>
               <h3>
                 Main Responsibilities:
               </h3>
@@ -154,11 +154,7 @@
               </ul>
 
               <br />
-              <h4>
-                To request an application, please send a resume and inquiries to
-                <a href="mailto:eric@etstutoring.org">eric@etstutoring.org</a>.
-              </h4>
-              <h4>We work with the following school districts:</h4>
+              <h4>We work with the following school districts:</h4>                
               <br />
               <a href="ses.html#abc-unified">ABC Unified School District</a> <strong>(Hawaiian Gardens/Cerritos)</strong>
               <br />
@@ -192,8 +188,14 @@
               <br />
               <a href="ses.html#rowland-unified">Rowland Unified School District</a> <strong>(including Rowland Heights & Hacienda Heights)</strong>
               <p>
-                <a href="mailto:eric@etstutoring.org" class="btn btn-primary btn-large">Email Us&raquo;</a>
+              <h4>
+                To request an application, please send a resume and inquiries to
+                <a href="mailto:eric@etstutoring.org">eric@etstutoring.org</a>.
+              </h4>
+              <br />
               </p>
+              <a href="mailto:eric@etstutoring.org" class="btn btn-large btn-block btn-primary">Email Us</a>
+
             </div> <!-- tab pane -->
           </div> <!-- tab content-->
         </div> <!-- span 7 -->
