--- a/apps/ets_tutoring_2/public/index.html
+++ b/apps/ets_tutoring_2/public/index.html
@@ -82,29 +82,27 @@
       </div>
 
       <!-- Example row of columns -->
-      <div class="row-fluid">
+      <div class="row">
         <div class="span5 offset2">
           <h2>High Performance</h2>
+          <p><a class="btn" href="chart.html">
            <img src = "img/chart_med.jpg" height ="300px"/>
+          </a></p>
          </br>
-          <p><a class="btn" href="chart.html">View details &raquo;</a></p>
         </div>
-        <div class="span5">
+        <div class="span3">
           <h2>Services</h2>
-            <br>
-            <ul>
-              <li>Pre K-College Level</li>
-              <li>Home schooling</li>
-              <li>Test prep (SAT,GRE,etc.)</li>
-              <li>Advanced writing</li>
-              <li>All subjects</li>
-              <li>Special Ed./IEP</li>
-              <li>ESL</li>
-            </ul>
-          <p>
-            <a class="btn" href="ses.html">View details &raquo;
-            </a>
-          </p>
+            <div class="well">
+              <ul>
+                <li>Pre K-College Level</li>
+                <li>Home schooling</li>
+                <li>Test prep (SAT,GRE,etc.)</li>
+                <li>Advanced writing</li>
+                <li>All subjects</li>
+                <li>Special Ed./IEP</li>
+                <li>ESL</li>
+              </ul>
+            </div>
        </div> 
       </div>
 
