--- a/apps/ets_tutoring_2/public/tutor.html
+++ b/apps/ets_tutoring_2/public/tutor.html
@@ -64,6 +64,7 @@
 
       <!--Carousel-->
       <div id="main" class="row">
+            <h1 id="tutor_heading"> Our Tutors </h1> 
         <div class="span6 offset3">
           <div id="myCarousel" class="carousel slide">
           <!-- Carousel items -->
