ETS layout changes. Work in progress. Removed extraneous images.

--- a/apps/ets_tutoring_2/public/about.html
+++ b/apps/ets_tutoring_2/public/about.html
@@ -62,18 +62,19 @@
   <div class="container">
 
     <div class = "hero-unit" id ="program-design">
-      <h1>
-        Our Mission
-      </h1>
+      <h1>Our Mission</h1>
+      <p class="lead">    
+          <strong>
+            ETS has been providing quality tutoring to residents of the Palos Verdes Peninsula and neighboring South Bay for over twenty years. Our tutoring staff is made up of credentialed teachers and tutors with advanced degrees and/or specializations. All of our tutoring sessions are 1 on 1 and take place in individualized rooms. We also offer in-home and in-library tutoring.  Students are matched with tutors based on each student's individual needs.
+          </strong>
+      </p>
       <div class="image">
         <img src = "img/bonnie_marco_1200.jpg">
       </div>
       <br />
-        <p class="lead">    
-          ETS seeks to instill the spirit of achievement in all of our students
-          through  mentorship, innovation, and student engagement.  ETS tutors build a positive, open relationship with their students so that they 
-          can better understand their needs.
-          Our tutors then create lessons that try to capture their students’ interests.
+
+        <p>
+          ETS seeks to instill the spirit of achievement in all of our students through mentorship, innovation, and student engagement.  ETS tutors build a positive, open relationship with their students so that they can better understand their needs. Our tutors then create lessons that try to capture their students’ interests.
         </p>
     </div>
 
