--- a/apps/ets_tutoring_2/public/faq.html
+++ b/apps/ets_tutoring_2/public/faq.html
@@ -71,10 +71,10 @@
       <div id="span1">
         <br />
         <h3>1. When was ETS established?</h3>
-        <p>Since 1986, ETS has been providing individualized 1 on 1 tutoring for 25 years.</p>
+        <p>ETS has been providing individualized 1 on 1 tutoring since 1986.</p>
 
         <h3>2. How many hours of tutoring will my child receive?</h3>
-        <p>16-26 hours total, including 1 hour for a pre-test and 1 hour for a post-test.</p>
+        <p>Hours are determined by each individual school disctrict.</p>
 
         <h3>3. Does ETS serve English Language Learners (ELLs) and Special Education Students?</h3>
         <p>Not only does ETS serve ELLs and Special Education Students,
@@ -105,16 +105,12 @@
         given an initial assessment from which an individualized learning plan is developed.  A
         qualified tutor will then work with each student on achieving his/her learning goals.</p>
 
-        <h3>8. How long is the program?</h3>
-        <p>Each district determines the length of the program.  Typically ETS’ program ranges from
-        16-26 tutoring hours per school year.</p>
-
-        <h3>9. Does my child’s school qualify?</h3>
+        <h3>8. Does my child’s school qualify?</h3>
         <p>Qualifying schools are listed by school district on this site; however, the list is subject to
         change.  Please verify with your child’s school district whether his or her school
         qualifies.</p>
 
-        <h3>10. How do I sign up?</h3>
+        <h3>9. How do I sign up?</h3>
         <p>Most districts send out information or brochures/applications to qualifying students.
         However, instructions and deadlines vary depending on your child's school district.</p>
         <p>Refer to our <a href="ses.html">SES district page</a> to find instructions and deadlines
