--- a/apps/ets_tutoring_2/public/index.html
+++ b/apps/ets_tutoring_2/public/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>ETS Home</title>
+    <title>ETS</title>
     <meta name="author" content="Red Pill Web Masons">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -61,25 +61,24 @@
     <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>ETS Educational & Tutorial Services</h1>
-
-        <p>
-        <div class="row-fluid">
-          <div class="span6" id="briana">        
-            <img src ="img/Briana_1200.jpg" width="1200px"/>
+      <div class="hero-unit" id="index_heading">
+        <div class="row">
+          <div class="span12" id="ets_heading">
+            <h1>ETS Educational & Tutorial Services</h1>
           </div>
-          <div class="span4">
-            <strong>
-              ETS has been providing quality tutoring to residents of the Palos Verdes Peninsula and neighboring South Bay for over twenty years. Our tutoring staff is made up of credentialed teachers and tutors with advanced degrees and/or specializations. All of our tutoring sessions are 1 on 1 and take place in individualized rooms. We also offer in-home and in-library tutoring.  Students are matched with tutors based on each student's individual needs.
-            </strong>
-        </p>
-            <br />
-              <a class="btn btn-primary btn-large" href="about.html">Learn more &raquo;</a>            
-          </div>          
         </div>
-
       </div>
+        <div class="row">
+          <div class="span7 offset1" id="briana">        
+            <img src ="img/Briana_1200_draw.jpg"/>
+          </div>            
+          <div class="span2">
+            <div id="billboard_line">
+              <h2>1 on 1 tutoring</h2>
+              <a class="btn btn-primary btn-large" href="about.html">Learn more &raquo;</a>                          
+            </div>
+          </div>
+        </div>
 
       <!-- Example row of columns -->
       <div class="row">
