Added lightbox for chart. Changed copy for chart. Added slideshow for index.

--- a/apps/ets_tutoring_2/public/chart.html
+++ b/apps/ets_tutoring_2/public/chart.html
@@ -62,16 +62,14 @@
         <div class="row">
           <div class="span4" id="chart_text">
             <p class="lead text-center">
-                In an impartial study conducted by THE LEGION OF IMPORTANT EDUCATIONAL RESEARCHERS, ETS posted high results. As illustrated by the chart, students enrolled in the ETS program had the greatest average improvements in their test scores.
-            </p>
-
-            <p>
-              This copy can be significantly improved and should be treated as a placeholder.
+                <strong>Talk is cheap.</strong> In 2011, the Los Angeles Unified School District initiated a study to determine the effectiveness of SES tutoring. The final results showed what selective parents already know: ETS is far superior to any other company in improving student test scores.
             </p>
           </div>
           
           <div class="span6">
-            <img id="chart" src="img/Impact_of_SES_2009-10_26_.jpg" />
+                          <a href="img/Impact_of_SES_2009-10_26_.jpg" class="lightbox">
+                            <img id="chart" src="img/Impact_of_SES_2009-10_26_.jpg" />
+                          </a>
           </div>
 
         </div> <!--row-->
@@ -92,6 +90,8 @@
 <script src="js/libs/bootstrap/bootstrap.min.js"></script>
 
 <script src="js/script.js"></script>
+
+
 <script>
     var _gaq=[['_setAccount','UA-33886495-1'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
