ETS: Edited index slideshow & removed stick figure backgrounds.

--- a/apps/ets_tutoring_2/public/index.html
+++ b/apps/ets_tutoring_2/public/index.html
@@ -149,10 +149,10 @@
 <script type="text/javascript">
   $(document).ready(function() {
     $('#slide_show1').cycle({
-      fx: 'fade',
-      speedIn: 5500,
-      speedOut: 5500,
-      speed: 0
+      fx: 'fadeout',
+      speedIn: 10000,
+      speedOut: 10000,
+      continuous: true,
     });
   });
 </script>
