changed "high performance" on index to white on black. Testimonials "coming soon" and scrollspy modification.

--- a/apps/ets_tutoring_2/public/services.html
+++ b/apps/ets_tutoring_2/public/services.html
@@ -86,7 +86,7 @@
         </div>        
         <a href="#private"></a>
         <div class="span6">
-            <h1>Private Instruction</h1>
+            <h1 id="private">Private Instruction</h1>
             <p>ETS has been providing private, individualized 1 on 1 tutoring since 1986. ETS provides a variety of instructional options from innovative, critical thinking programs to writing enrichment.</p>
 
             <p>Not only does ETS serve ELLs and Special Education Students,
@@ -94,7 +94,7 @@
         <br />
 
         <a href="#ses"></a>  
-          <h1>
+          <h1 id="ses">
             S.E.S.
           </h1>        
           <h3>What is SES?</h3>
