--- a/apps/ets_tutoring_2/public/testimonials.html
+++ b/apps/ets_tutoring_2/public/testimonials.html
@@ -80,7 +80,7 @@
 
     <div class="container">
       <h1>Testimonials</h1>
-      <article>ETS is great. I mean, really. Great.</article>
+      <h2>Coming soon!</h2>
     </div>
       <hr>
     <div class="container">
