groundwork for hoverIntent functionality. Miscellaneous changes per (08/26  meeting)

--- a/apps/ets_tutoring_2/public/services.html
+++ b/apps/ets_tutoring_2/public/services.html
@@ -87,16 +87,25 @@
         <a href="#private"></a>
         <div class="span6">
             <h1 id="private">Private Instruction</h1>
+            <h2>Services</h2>
+            <ul>
+              <li>Pre K-College Level</li>
+              <li>Home schooling</li>
+              <li>Test prep (SAT,GRE,etc.)</li>
+              <li>Advanced writing</li>
+              <li>All subjects</li>
+              <li>Special Ed./IEP</li>
+              <li>ESL</li>
+            </ul>
             <p>ETS has been providing private, individualized 1 on 1 tutoring since 1986. ETS provides a variety of instructional options from innovative, critical thinking programs to writing enrichment.</p>
 
             <p>Not only does ETS serve ELLs and Special Education Students,
             but we have tutors that specialize in those specific areas! ETS tutors are assigned to students that match both their availability and their skill set.</p>
         <br />
 
-        <a href="#ses"></a>  
-          <h1 id="ses">
-            S.E.S.
-          </h1>        
+        <a href="#SES"></a>  
+          <h1 id="SES">S.E.S.</h1>        
+          
           <h3>What is SES?</h3>
           <p>The No Child Left Behind Act of 2001 allows parents to select Supplemental Educational
           Services (SES) for their children.  Students are eligible for services if they attend Title I
