--- a/apps/ets_tutoring_2/public/index.html
+++ b/apps/ets_tutoring_2/public/index.html
@@ -131,6 +131,8 @@
 
         <div id="bottom_four_4" class="bottom_four">
         </div>
+        <div id="#bottom_four_4_preload">
+        </div>
       </aside>
       <hr>
     <div class="container">
@@ -141,6 +143,8 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.10.1.min.js"><\/script>')</script>
+
+<script src="js/libs/jquery.hoverIntent.min.js"></script>
 
 <script src="js/libs/bootstrap/bootstrap.min.js"></script>
 
