--- a/apps/ets_tutoring_2/public/services.html
+++ b/apps/ets_tutoring_2/public/services.html
@@ -45,15 +45,8 @@
                 </a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                     <li><a href="services.html#private">Private</a></li>
-                    <li class="dropdown-submenu">
-                      <a class="dropdown-toggle" datatoggle="dropdown" role="button" tabindex="-1" href="services.html#ses">
-                        SES                   
-                        <b class="caret"></b>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a href="services.html#ses">SES</a></li>
-                        <li><a href="ses.html">SES Schools</a></li>
-                      </ul>
+                    <li><a href="services.html#ses">SES</a></li>
+                    <li><a href="ses.html">SES Schools</a></li> 
                     </li>                    
                   </ul>
               </li>
@@ -78,13 +71,7 @@
 
     <div class="hero-unit">
       <div class="row">
-        <div class="span2">
-          <ul class="nav nav-pills nav-stacked" id="district-tabs">
-            <li class="active"><a href="#private">Private</a></li>
-            <li><a href="#SES">S.E.S.</a></li>
-          </ul>
-        </div>        
-        <a href="#private"></a>
+      
         <div class="span6">
             <h1 id="private">Private Instruction</h1>
             <h2>Services</h2>
@@ -103,8 +90,7 @@
             but we have tutors that specialize in those specific areas! ETS tutors are assigned to students that match both their availability and their skill set.</p>
         <br />
 
-        <a href="#SES"></a>  
-          <h1 id="SES">S.E.S.</h1>        
+          <h1 id="ses">S.E.S.</h1>        
           
           <h3>What is SES?</h3>
           <p>The No Child Left Behind Act of 2001 allows parents to select Supplemental Educational
