Employment- added ses schools link. SES Schools- updated hacienda signup deadline.

--- a/apps/ets_tutoring_2/public/employment.html
+++ b/apps/ets_tutoring_2/public/employment.html
@@ -166,40 +166,12 @@
               </ul>
 
               <br />
-              <h4>We work with the following school districts:</h4>                
+              <h3>For a complete list of school districts we work with, please visit our <a href="/ses.html">SES schools page</a>.</h3>                
               <br />
-              <a href="ses.html#abc-unified">ABC Unified School District</a> <strong>(Hawaiian Gardens/Cerritos)</strong>
-              <br />
-              <a href="ses.html#anaheim-city">Anaheim City Unified School District</a>
-              <br />
-              <a href="ses.html#baldwin-park-unified">Baldwin Park Unified School District</a> <strong>(including West Covina)</strong>
-              <br />
-              <a href="ses.html#centinela-valley-union-high">Centinela Valley Union High School District</a> <strong>(Hawthorne/Lawndale)</strong>
-              <br />
-              <a href="ses.html#downey-unified">Downey Unified School District</a>
-              <br />
-              <a href="ses.html#el-monte-city">El Monte City School District</a>
-              <br />
-              <a href="ses.html#el-rancho-unified">El Rancho Unified School District</a> <strong>(Pico Rivera)</strong>
-              <br />
-              <a href="ses.html#garvey">Garvey School District</a> <strong>(Rosemead/Monterey Park)</strong>
-              <br />
-              <a href="ses.html#glendale-unified">Glendale Unified School District</a>
-              <br />
-              <a href="ses.html#hacienda-la-puente-unified">Hacienda-La Puente Unified School District</a>
-              <br />
-              <a href="ses.html#lawndale-elementary">Lawndale Elementary School District</a>
-              <br />
-              <a href="ses.html#lynwood-unified">Lynwood Unified School District</a>
-              <br />
-              <a href="ses.html#montebello-unified">Montebello Unified School District</a> <strong>(including Commerce & Bell Gardens)</strong>
-              <br />
-              <a href="ses.html#rowland-unified">Rowland Unified School District</a> <strong>(including Rowland Heights & Hacienda Heights)</strong>
-              <p>
-              <h4>
+              <h3>
                 To request an application, please send a resume and inquiries to
                 <a href="mailto:eric@etstutoring.org">eric@etstutoring.org</a>.
-              </h4>
+              </h3>
               <br />
               </p>
               <a href="mailto:eric@etstutoring.org" class="btn btn-large btn-block btn-primary">Email Us</a>
