--- a/apps/ets_tutoring_2/public/ses.html
+++ b/apps/ets_tutoring_2/public/ses.html
@@ -691,9 +691,8 @@
     <li>Wing Lane Elementary <strong>(K-6)</strong></li>
     <li>Workman Elementary</li>
   </ul>
-  <h3>
-      Signups will begin soon. Please call for more information. <br />
-    </h3>
+  <h2>Sign-up Information:</h2>
+      Sign-up deadline is September 18, 2013. Applications are available <a href="http://do-ncs-winweb3.hlpusd.k12.ca.us/index.php/parents/supplemental_educational_services_-_free_tutoring/">here</a>.  Please call for more information. <br />
     <a class="phone" href="tel:6265393078">(626) 539-3078</a> <br />
     <br />
     <h3>Additional Numbers</h3>
