ETS updates: new tutor images & ses schools information.

--- a/apps/ets_tutoring_2/public/ses.html
+++ b/apps/ets_tutoring_2/public/ses.html
@@ -90,13 +90,13 @@
             <li><a href="ses.html#el-monte-city">El Monte City</a></li>
             <li><a href="ses.html#el-monte-union-high">El Monte Union High</a></li>
             <li><a href="ses.html#el-rancho-unified">El Rancho Unified</a></li>
-            <li><a href="ses.html#fullerton-joint-union">Fullerton Joint Union High School District</a></li>
+            <li><a href="ses.html#fullerton-joint-union">Fullerton Joint Union High</a></li>
             <li><a href="ses.html#garden-grove-unified">Garden Grove Unified</a></li>
             <li><a href="ses.html#garvey">Garvey</a></li>
             <li><a href="ses.html#glendale-unified">Glendale Unified</a></li>
             <li><a href="ses.html#hacienda-la-puente-unified">Hacienda La Puente Unified</a></li>
             <li><a href="ses.html#hawthorne">Hawthorne</a></li>
-            <li><a href="ses.html#huntington-beach-union-high">Huntington Beach Union High</a></li>
+            <!-- <li><a href="ses.html#huntington-beach-union-high">Huntington Beach Union High</a></li> Temporarily unexposed. Not working with them thsi year-->
             <li><a href="ses.html#inglewood-unified">Inglewood Unified</a></li>
             <li><a href="ses.html#la-habra">La Habra</a></li>
             <li><a href="ses.html#lawndale-elementary">Lawndale Elementary</a></li>
@@ -109,7 +109,7 @@
             <li><a href="ses.html#rowland-unified">Rowland Unified</a></li>
             <li><a href="ses.html#san-gabriel">San Gabriel Unified</a></li>
             <li><a href="ses.html#torrance">Torrance Unified</a></li>
-            <li><a href="ses.html#westminster">Westminster</a></li>
+            <!--<li><a href="ses.html#westminster">Westminster</a></li>    Temporarily unexposed. Pending confirmation. -->
             <li><a href="ses.html#whittier-union">Whittier Union</a></li>
             <li><a href="ses.html#lacoe">Other- LACOE</a></li>
           </ul>
@@ -401,6 +401,7 @@
   <h2>Schools that Qualify for Tutoring:</h2>
   <ul>
     <li>Culver City Middle</li>
+    <li>El Rincon Elementary</li>
   </ul>
 
   <h3>
@@ -425,13 +426,18 @@
   </p>
   <h2>Schools that Qualify for Tutoring:</h2>
   <ul>
-    <li>East Middle</li>
+    <li>Alameda</li>
+    <li>Carpenter</li>
+    <li>Doty</li>
     <li>Griffiths Middle</li>
+    <li>Imperial Elementary </li>
+    <li>Lewis Elemetary</li>
+    <li>Old River Elementary</li>
+    <li>Rio Hondo</li>
     <li>Sussman Middle</li>
     <li>West Middle</li>
-    <li>Lewis Elemetary</li>
-    <li>Imperial Elementary</li>
-    <li>Old River Elementary</li>
+    <li>Williams</li>
+
   </ul>
   <h2>Sign-up information</h2>
   <p>
@@ -453,16 +459,7 @@
     Whittier, CA 90605 <br />
     Email: <a href="mailto:info@ewcsd.org">info@ewcsd.org</a> <br />
   </p>
-  <h2>Schools that Qualify for Tutoring:</h2>
-  <ul>
-    <li>East Middle</li>
-    <li>Griffiths Middle</li>
-    <li>Sussman Middle</li>
-    <li>West Middle</li>
-    <li>Lewis Elemetary</li>
-    <li>Imperial Elementary</li>
-    <li>Old River Elementary</li>
-  </ul>
+
   <h2>Sign-up information</h2>
   <p>
      Signups will begin soon. Please call for more information.
@@ -540,10 +537,13 @@
   </p>
   <h2>Schools that Qualify for Tutoring:</h2>
   <ul>
+    <li>Birney Elementary</li>
     <li>Durfee Elementary</li>
+    <li>Lawrence T. Magee Elementary</li>
+    <li>North Ranchito Elementary</li>
     <li>Rio Vista Elementary</li>
     <li>South Ranchito Elementary</li>
-    <li>Lawrence T. Magee Elementary</li>
+    <li>Valencia Elementary</li>
   </ul>
   <h2>Sign-up information:</h2>
   <p>
@@ -564,6 +564,14 @@
     1051 W. Bastanchury Rd. <br />
     Fullerton, CA 92833 <br />
   </p>
+  <h2>Schools that Qualify for Tutoring:</h2>
+  <ul>
+    <li>Buena Park High</li>
+    <li>Fullerton Union High</li>
+    <li>La Habra High</li>
+    <li>Sonora High</li>
+  </ul>
+  </ul>
   <h2>Sign-up information:</h2>
   <p>
      Signups will begin soon. Please call for more information.
@@ -605,12 +613,11 @@
   <h2>Schools that Qualify for Tutoring:</h2>
   <ul>
     <li>Bitely Elementary</li>
-    <li>Dewey Elementary</li>
-    <li>Marshall Elementary</li>
+    <li>Emerson Elementary</li>
     <li>Rice Elementary</li>
+    <li>Monterey Vista Elementary</li>
     <li>Garvey Intermediate</li>
     <li>Temple Intermediate</li>
-    <li>Monterey Vista</li>
   </ul>
   <h2>Sign-up information:</h2>
   <p>
@@ -710,14 +717,6 @@
     Hawthorne, CA 90250 <br />
     <br />
   </p>
-  <h2>Schools that Qualify for Tutoring:</h2>
-  <ul>
-    <li>Eucalyptus <strong>(K-5)</strong></li>
-    <li>Kornblum <strong>(K-5)</strong></li>
-    <li>Bud Carson Middle <strong>(6-8)</strong></li>
-    <li>Hawthorne Middle <strong>(6-8)</strong></li>
-    <li>Prairie Vista Middle <strong>(6-8)</strong></li>
-  </ul>
     <h3>
       Signups will begin soon. Please call for more information. <br />
     </h3>
@@ -763,6 +762,20 @@
     Inglewood, CA 90301 <br />
     <br />
   </p>
+  <h2>Schools that Qualify for Tutoring:</h2>
+  <ul>
+    <li>Bennet-Kew Elementary</li>
+    <li>Oak Street Elementary</li>
+    <li>Clyde Woodworth Elementary</li>
+    <li>Worthington Elementary</li>
+    <li>Crozier Middle</li>
+    <li>Monroe Middle</li>
+    <li>La Tijera K-8 Charter</li>
+    <li>Frank D. Parent School</li>
+    <li>Warren Lane School</li>
+    <li>Inglewood High</li>
+    <li>Morningside High</li>  
+  </ul>
     <h3>
       Signups will begin soon. Please call for more information. <br />
     </h3>
@@ -783,8 +796,9 @@
     La Habra, CA 90631 <br />
     <br />
   </p>
+  <h2>Sign-up Information:</h2>
     <h3>
-      Signups will begin soon. Please call for more information. <br />
+      Sign-ups are currently open. Please call for more information. <br />
     </h3>
     <a class="phone" href="tel:5627741926">(562) 774-1926</a> <br />
 
@@ -802,12 +816,6 @@
     4161 W. 147th St <br />
     Lawndale, CA 90260 <br />
   </p>
-  <h2>Schools that Qualify for Tutoring:</h2>
-  <ul>
-    <li>Roosevelt Elementary</li>
-    <li>William Green Elementary</li>
-    <li>Will Rogers Middle</li>
-  </ul>
   <h3>
       Signups will begin soon. Please call for more information. <br />
     </h3>
@@ -848,8 +856,14 @@
   </p>
   <h2>Schools that Qualify for Tutoring:</h2>
   <ul>
+    <li>Abbot Elementary</li>
+    <li>Lincoln Elementary</li>
+    <li>Lindbergh Elementary</li>
     <li>Lugo Elementary</li>
+    <li>Twain Elementary</li>
     <li>Roosevelt Elementary</li>
+    <li>Washington Elementary</li>
+    <li>Will Rogers Elementary</li>
     <li>Wilson Elementary</li>
     <li>Cesar Chavez Middle</li>
     <li>Lynwood Middle</li>
@@ -885,12 +899,13 @@
     <li>Bella Vista Elementary</li>
     <li>Cesar Chavez Elementary</li>
     <li>Fremont Elementary</li>
-    <li>Joseph Gascon Elementary</li>
     <li>Garfield Elementary</li>
+    <li>Joseph Gascon Elementary</li>
+    <li>La Merced Elementary</li>
+    <li>Potrero Heights Elementary</li>
     <li>Rosewood Park Elementary</li>
     <li>Suva Elementary</li>
     <li>Winter Gardens Elementary</li>
-    <li>Laguna Nueva</li>
     <li>Bell Gardens Intermediate</li>
     <li>Eastmont Intermediate</li>
     <li>Macy Intermediate</li>
@@ -918,6 +933,21 @@
     12820 Pioneer Blvd.<br />
     Norwalk, CA 90650 <br />
   </p>
+  <h2>Schools that Qualify for Tutoring:</h2>
+  <ul>
+    <li>Chavez Elementary</li>
+    <li>Dolland Elementary</li>
+    <li>Edmondson Elementary</li>
+    <li>Foster Elementary</li>
+    <li>Glazier Elementary</li>
+    <li>Johnston Elementary</li>
+    <li>Moffitt Elementary</li>
+    <li>New River Elementary</li>
+    <li>Nuffer Elementary</li>
+    <li>Sanchez Elementary</li>
+    <li>Corvallis Middle</li>
+    <li>Waite Middle</li>
+  </ul>
   <h3>
       Signups will begin soon. Please call for more information. <br />
     </h3>
