--- a/apps/ets_tutoring_2/public/tutor.html
+++ b/apps/ets_tutoring_2/public/tutor.html
@@ -79,6 +79,29 @@
             <h1 id="tutor_heading"> Our Tutors </h1> 
         <div class="span6 offset3">
           <div id="myCarousel" class="carousel slide">
+          <!--- not working
+          <ol class="carousel-indicators">
+             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+             <li data-target="#myCarousel" data-slide-to="1"></li>
+             <li data-target="#myCarousel" data-slide-to="2"></li>
+             <li data-target="#myCarousel" data-slide-to="3"></li>
+             <li data-target="#myCarousel" data-slide-to="4"></li>
+             <li data-target="#myCarousel" data-slide-to="5"></li>
+             <li data-target="#myCarousel" data-slide-to="6"></li>
+             <li data-target="#myCarousel" data-slide-to="7"></li>
+             <li data-target="#myCarousel" data-slide-to="8"></li>
+             <li data-target="#myCarousel" data-slide-to="9"></li>
+             <li data-target="#myCarousel" data-slide-to="10"></li>
+             <li data-target="#myCarousel" data-slide-to="11"></li>
+             <li data-target="#myCarousel" data-slide-to="12"></li>
+             <li data-target="#myCarousel" data-slide-to="13"></li>
+             <li data-target="#myCarousel" data-slide-to="14"></li>
+             <li data-target="#myCarousel" data-slide-to="15"></li>
+             <li data-target="#myCarousel" data-slide-to="16"></li>
+             <li data-target="#myCarousel" data-slide-to="17"></li>
+             <li data-target="#myCarousel" data-slide-to="18"></li>
+             <li data-target="#myCarousel" data-slide-to="19"></li>
+           </ol> -->
           <!-- Carousel items -->
             <div class="carousel-inner">
               <div class="active item"><img class="carousel_slide" src="img/stick_tutor/juana_480.jpg" /></div>
@@ -87,7 +110,19 @@
               <div class="item"><img class="carousel_slide" src="img/stick_tutor/yvette_480.jpg" /></div>              
               <div class="item"><img class="carousel_slide" src="img/stick_tutor/judy_480.jpg" /></div> 
               <div class="item"><img class="carousel_slide" src="img/stick_tutor/bob_480.jpg" /></div> 
-
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/jessica_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/alba_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/jesus_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/maira_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/nancy_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/winnie_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/robert_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/elizabeth_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/jesica_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/lan_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/sally_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/lupe_480.jpg" /></div> 
+              <div class="item"><img class="carousel_slide" src="img/stick_tutor/adam_480.jpg" /></div> 
 
             </div>
             <!-- Carousel nav -->
