ETS update: updated SES schools

--- a/apps/ets_tutoring_2/public/ses.html
+++ b/apps/ets_tutoring_2/public/ses.html
@@ -382,7 +382,9 @@
   </div> <!-- row -->
 
   <h2>Sign-up information:</h2>
-  <p>Applications are due October 7th. Please call for more information. 
+  <p>Applications are due October 7th and can be found online <a href="http://web.compton.k12.ca.us/pages/departments/Special_Projects/ses.aspx?">here</a>. Remember to list ETS, Educational and Tutorial Services, as your 1st choice for service provider.</p>
+
+  <p> For more information, call: 
   <a class="phone" href="tel:7149220394">(714) 922-0394</a> <br /></p>
   <h3>Additional Numbers</h3>
   <a class="phone" href="tel:3104891387">(310) 489-1387</a> <br />
@@ -547,7 +549,7 @@
   </ul>
   <h2>Sign-up information:</h2>
   <p>
-     Signups will begin soon. Please call for more information.
+     Sign-ups end in September. Please call for more information.
   </p>
   <a class="phone" href="tel:5627741926">(562) 774-1926</a> <br />
   <br />
@@ -574,7 +576,7 @@
   </ul>
   <h2>Sign-up information:</h2>
   <p>
-     Signups will begin soon. Please call for more information.
+     The sign-up deadline is September 13. Please call for more information.
   </p>
   <a class="phone" href="tel:7149220394">(714) 922-0394</a> <br />
   <br />
@@ -777,7 +779,7 @@
     <li>Morningside High</li>  
   </ul>
     <h3>
-      Signups will begin soon. Please call for more information. <br />
+      The sign-up deadline is October 29th. Applications are available starting October 1st. Please call for more information. <br />
     </h3>
     <a class="phone" href="tel:3104891387">(310) 489-1387</a> <br />
 
@@ -913,8 +915,9 @@
     <li>Montebello Intermediate</li>
     <li>Suva Intermediate</li>
   </ul>
-  <h3>
-      Signups will begin soon. Please call for more information. <br />
+  <h2>Sign-up Information</h2>
+    <h3>
+      The sign-up deadline is October 11th. Please call for more information.
     </h3>
     <a class="phone" href="tel:3236960593">(323) 696-0593</a> <br />
 
